# trpg-player

./: .gitignore  .gitleaks.toml  CLAUDE.md  CONTENT_NOTICE.md  DESIGN.md  LICENSE  README.md  package.json  pnpm-lock.yaml  progress.md
server/: ai_settings.json  alembic.ini  desktop.spec  openapi.json  pyproject.toml  run_desktop.py
server/alembic/: env.py
server/alembic/versions/: 20260627_event_type_ooc.py  20260627_participant_ready.py  20260627_phase2_identity_seats.py  20260627_rulebook_rag.py  20260627_session_participants.py  20260629_asset_categories.py  20260629_asset_default.py  20260629_assets.py  20260630_character_status_string.py  20260702_module_rag.py  20260703_module_handouts.py  20260719_event_sequence_unique.py  20260719_module_truth.py  20260720_human_kp_mode.py  20260721_human_kp_workspace.py  20260722_identity_schema_repair.py  20260722_identity_seats.py  20260723_module_map_nodes.py  53e23cb587bd_character_module_id_nullable.py  6ad0ae3e87d8_初始化数据库模型.py
server/app/: config.py  database.py  main.py
server/app/ai/: anthropic.py  comfyui.py  context.py  deepseek.py  director_signals.py  embedding.py  llm_factory.py  npc_promote.py  provider.py  recap.py  replay.py  story_summarizer.py  tools.py  turn_planner.py  turn_validator.py  usage_tracker.py
server/app/api/: ai_settings.py  assets.py  characters.py  chat.py  combat.py  deps.py  images.py  inventory.py  kp.py  modules.py  onboarding.py  router.py  rulebooks.py  sessions.py
server/app/content/: __init__.py  onboarding.py
server/app/models/: __init__.py  asset.py  base.py  character.py  event_log.py  module.py  rulebook.py  session.py  session_participant.py
server/app/rules/: __init__.py  base.py  dice.py  registry.py
server/app/schemas/: asset.py  character.py  combat.py  event.py  kp.py  module.py  onboarding.py  rulebook.py  session.py
server/app/services/: ai_character_service.py  (+45 more)
server/evals/: README.md  __init__.py  checks.py  common.py  compare.py  judge.py  run.py  snapshot.py
server/scripts/: check_embeddings.py  export_openapi.py  fix_derived_skills.py  make_seed.py  map_spike.py
server/tests/: test_acting_players.py  test_ai_status.py  test_ai_teammates.py  test_assets_api.py  test_backstage.py  test_chase.py  test_chase_service.py  test_chat_service.py  test_check_tiers.py  test_combat.py  test_combat_api.py  test_combat_service.py  test_comfyui_images.py  test_context_estimate.py  test_dice_detail.py  test_dice_v2.py  test_director_signals.py  test_evals.py  test_event_sequence.py  test_first_aid.py  test_growth.py  test_handouts.py  test_hex_map.py  test_human_kp.py  test_human_kp_workspace.py  test_inventory.py  test_kp_agent.py  test_kp_all_ai_party.py  test_kp_immersion.py  test_kp_rulebook.py  test_kp_tool_loop.py  test_llm_factory.py  test_lobby.py  test_location.py  test_madness.py  test_major_wound.py  test_map_mark.py  test_map_quality.py  test_map_service.py  test_migrations.py  (+33 more)
(+178 files in other folders)
